--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@wocwin/t-ui": "^1.1.5",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "highlight.js": "^11.9.0",
+    "snowflake-id": "^1.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "wangeditor": "^4.7.15"
