--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "snowflake-id": "^1.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "wangeditor": "^4.7.15"
+    "wangeditor": "^4.7.15",
+    "sass": "1.32.13",
+    "sass-loader": "10.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "sass": "1.32.13",
+    "sass-loader": "10.1.1"
   },
   "browserslist": [
     "> 1%",
